# hscardgen

./: Cargo.toml  README.md  build.rs  texture_frames.xlsx
gui_tests/: main.rs
res/: fragment_shader.glsl  vertex_shader.glsl
src/: assets.rs  cards.rs  constants.rs  error.rs  generator.rs  lib.rs  resources.rs  utils.rs
src/builder/: ability.rs  common.rs  mod.rs
