[package]
name = "hscardgen"
version = "0.1.0"
authors = ["Istvan Fehervari <gooksl@gmail.com>"]
build = "build.rs"

[lib]
name = "hscardgen"
#crate-type = ["dylib"]

[build-dependencies]
curl = "0.4.8" # downloading CardDefs.xml
rayon = "0.8.2" # parallel iterators

[dependencies]
unitypack = { git = "https://github.com/ifeherva/UnityPackRust" }
#unitypack = { path = "../UnityPackRust/UnityPack/" }
sfml = "0.14.0" # image processing lib
glob = "0.2.11" # list file system with pattern
heapsize = "0.4.1" # get heapsize of objects (debug)
rayon = "0.8.2" # parallel iterators
serde = "1.0.11"
serde_json = "1.0"
serde_derive = "1.0.11"
byteorder = "1"
time = "0.1.38"
lazy_static = "1.0.0"